# VerseMiner

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: build-and-push.yml
core/common_constants/: constants.py  models.py
core/src/: LyricsGenerator.py
core/utils/: llm_utils.py  logging_utils.py  sql_connector.py  sql_utils.py
db_data/: lyrics.db
k8s/base/: argocd-app.yaml  deployment.yaml  externalsecret.yaml  kustomization.yaml  pvc.yaml  service.yaml
k8s/overlays/linux/: kustomization.yaml
